fix: no need of scrollbar in app__chat as .chat inside <Chat> has one now

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -134,7 +134,6 @@
 
 .app__chat{
   background-color: #363A3E;
-  overflow-y: scroll; 
   /* overflow-x: clip; */
   width:100%;
   height:100%;
@@ -242,9 +241,6 @@
 .app__eventsFeed::-webkit-scrollbar {
   display: none;
 }
-.app__chat::-webkit-scrollbar {
-  display: none;
-}
 .app__profile::-webkit-scrollbar {
   display: none;
 }
@@ -263,10 +259,6 @@
 scrollbar-width: none;  /* Firefox */
 }
 .app__eventsFeed{
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-  }
-.app__chat{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   }
